--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,8 +10,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Lato', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -19,8 +22,22 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+ol, ul {
+  list-style: none;
+}
+
+.text_label {
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 140%;
+  color: #797D7F;
+}
+
+.text_content {
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 130%;
+  color: #14171A;
 }
 
 @media (prefers-color-scheme: dark) {
