add livestream and quiz section

--- a/src/styles/News.module.scss
+++ b/src/styles/News.module.scss
@@ -19,6 +19,7 @@
       .headline_news {
         display: flex;
         justify-content: space-between;
+        cursor: pointer;
 
         .image_box {
           margin-left: 16px;
