--- a/src/styles/Quiz.module.scss
+++ b/src/styles/Quiz.module.scss
@@ -19,6 +19,11 @@
       flex-wrap: wrap;
       justify-content: space-between;
 
+      .flex_card {
+        flex-basis: 48%;
+        margin-bottom: 16px;
+      }
+
       .card {
         padding: 12px;
         min-width: 156px;
@@ -53,6 +58,10 @@
   .container {
     .main_content{
       .grid {
+        .flex_card {
+          flex-basis: 31.33%;
+        }
+
         .card {
           flex-basis: 33.33%;
         }
